--- a/.gitignore
+++ b/.gitignore
@@ -87,6 +87,10 @@ config.properties
 *.gif
 !app_icon.png
 !logo.png
+!images/*.png
+!images/*.jpg
+!images/*.jpeg
+!images/*.gif
 
 # Backup files
 *.bak
